# ST0255-2023-1-Projects

./: .gitignore  README.md
Blue-Dragon/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  blue_dragon.cpp  build.sh  http_server.cpp  http_server.h  index.html  main.cpp  main.py  run_and_build_docker.sh
Blue-Dragon/experimentations/: main.cpp  main.py  post.cpp  purple_dragon.cpp  substring_test.cpp
Blue-Dragon/experimentations/Purple-Dragon/: .dockerignore  build.sh  docker-compose.yml  run.sh
Blue-Dragon/public/: index.html
Blue-Dragon/testing/: loadtesting.sh  locust.py
Blue-Dragon/testing/contestants/: .gitignore  express-test.js  package.json
Blue-Dragon/testing/contestants/public/: index.html
Project-2/: README.md  practica-2-enrutamiento-dinamico.pkt  practica-2-enrutamiento-estatico.pkt
Project-2/config dinamic routers/: Barranquilla_running-config.txt  Cali_running-config.txt  Popayan_running-config.txt
Project-2/config dynamic routers/: Bogota_running-config.txt  Cartagena_running-config.txt  Internet_running-config.txt  Medellin_running-config.txt  Rio Negro_running-config.txt
Project-2/config static routers/: Barranquilla_running-config.txt  Bogota_running-config.txt  Cali_running-config.txt  Cartagena_running-config.txt  Internet_running-config.txt  Medellin_running-config.txt  Popayan_running-config.txt  Rio Negro_running-config.txt
Project-3/: README.md  practica-3.pkt
Project-3/Config/: Access-SW7_running-config.txt  Barranquilla_running-config.txt  Bogota_running-config.txt  Cali_running-config.txt  Cartagena_running-config.txt  CoreCollapsed_running-config.txt  Distribution Core_running-config.txt  Internet_running-config.txt  Medellin_running-config.txt  Popayan_running-config.txt  Rio Negro_running-config.txt  Switch Core_running-config.txt
